After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761686 - GtkTreeView theming problems
GtkTreeView theming problems
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Themes
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-02-07 21:11 UTC by Christoph Reiter (lazka)
Modified: 2016-03-01 20:22 UTC
See Also:
GNOME target: 3.20
GNOME version: ---


Attachments
Python example (1.36 KB, text/plain)
2016-02-07 21:11 UTC, Christoph Reiter (lazka)
Details

Description Christoph Reiter (lazka) 2016-02-07 21:11:15 UTC
Created attachment 320585 [details]
Python example

1) Calling Gtk.Widget.drag_highlight draws a border around every cell in the treeview. With 3.18 there was only a border around the whole treeview.

2) The entry used for inline editing in treeviews is way to large and clipped.

The attached Python example shows both issues.
Comment 1 Benjamin Otte (Company) 2016-02-09 13:38:00 UTC
1)is fallout from the dnd change we did early in the cycle. The rough code in https://git.gnome.org/browse/gtk+/tree/gtk/theme/Adwaita/_common.scss?h=3.19.8#n3679 causes every box in the widget to get a black border.

Though to be fair, I'm not sure what drag hilighting a whole treeview means conceptually and how GTK should handle that case. Just like before and hilight the whole treeview?
I don't think we can hilight all the rows that would accept a drop, or can we?

2) is cause by GTK setting entry { min-height: 32px; } unconditionally. I think it should not do that for entries without frame, ie entry.flat. It certainly should not do that for entries in treeviews.
Comment 2 Matthias Clasen 2016-02-12 03:38:18 UTC
Fixed the big entries
Comment 3 Lapo Calamandrei 2016-02-14 00:04:26 UTC
That drag hilighting wildcard in adwaita is particularly nasty since adding a border changes the size, I have some ideas about how to avoid that, but since everything basically can be a drop target I fear we need handle that widget by widget.
Comment 4 Lapo Calamandrei 2016-02-14 22:44:01 UTC
The black border making the widget grow should be fixed, please check it out.
Comment 5 Christoph Reiter (lazka) 2016-02-14 22:52:50 UTC
A few more (maybe related things) regarding drag highlights:

gtk3-widget-factory + dragging some text:

* the 3rd combobox also highlights the included icon on the right
* spinbuttons don't highlight while the comboboxes do
Comment 6 Lapo Calamandrei 2016-02-14 23:13:49 UTC
Related, pretty ugly, but I guess it's stuff for another bug, would you file it?
Comment 7 Christoph Reiter (lazka) 2016-02-17 14:24:10 UTC
Filed bug 762187
Comment 8 Lapo Calamandrei 2016-02-18 15:33:13 UTC
thanks